# kode-agents

./: .gitignore  README.md  claude-code-mini.py
claude-code-deepagents/: README.md  pyproject.toml
claude-code-deepagents/claude_code_deepagents/: __init__.py  __main__.py  agent.py  config.py  main.py  tools.py
claude-code-deepagents/claude_code_deepagents/skills/: __init__.py  load.py  middleware.py
claude-code-deepagents/claude_code_deepagents/subagents/: __init__.py  code.py  explore.py  plan.py
docs/: ClaudeCode分层多Agent架构篇.md  deepagents实现subagents.md  deepagents实现异步流式读取实现todos.md  ptc-agent-core-capabilities-analysis.md  skills-analysis.md
